test/e2e/dra/test-driver/deploy/example/devicetaintpolicy.yaml
apiVersion: resource.k8s.io/v1alpha3
kind: DeviceTaintRule
metadata:
  name: example
spec:
  # The entire hardware installation is broken.
  # Evict all pods and don't schedule new ones.
  selector:
    driver: dra.example.com
  taint:
    key: dra.example.com/health
    value: "Down"
    effect: NoExecute
