test/e2e/dra/test-driver/deploy/example/pod-inline-multiple.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: pause-claim-parameters
  namespace: default
data:
  a: b
---
apiVersion: resource.k8s.io/v1alpha1
kind: ResourceClaimTemplate
metadata:
  name: pause-template
  namespace: default
spec:
  metadata:
    labels:
      app: inline-resource
  spec:
    resourceClassName: example
    parametersRef:
      kind: ConfigMap
      name: pause-claim-parameters
---
apiVersion: v1
kind: Pod
metadata:
  name: pause
  labels:
    name: pause
spec:
  containers:
  - name: pause1
    image: "registry.k8s.io/pause:3.6"
    resources:
      claims:
      - name: resource1
  - name: pause2
    image: "registry.k8s.io/pause:3.6"
    resources:
      claims:
      - name: resource2
  resourceClaims:
  - name: resource1
    source:
      resourceClaimTemplateName: pause-template
  - name: resource2
    source:
      resourceClaimTemplateName: pause-template
