test/e2e/dra/test-driver/deploy/example/pod-shared.yaml
# One external resource claim, two pods, two containers in each pod.
# Pods share the same resource.
# One container uses resource, one does not.
apiVersion: resource.k8s.io/v1
kind: ResourceClaim
metadata:
  name: shared-claim
spec:
  devices:
    requests:
    - name: my-device
      exactly:
        deviceClassName: example
    config:
    - opaque:
        driver: test-driver.cdi.k8s.io
        parameters:
          a: b
---
apiVersion: v1
kind: Pod
metadata:
  name: test-shared-claim
spec:
  restartPolicy: Never
  containers:
  - name: with-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.37.0-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
    resources:
      claims:
      - name: resource
  - name: without-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.37.0-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
  resourceClaims:
  - name: resource
    resourceClaimName: shared-claim
---
apiVersion: v1
kind: Pod
metadata:
  name: test-shared-claim-2
spec:
  restartPolicy: Never
  containers:
  - name: with-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.37.0-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
    resources:
      claims:
      - name: resource
  - name: without-resource
    image: registry.k8s.io/e2e-test-images/busybox:1.37.0-1
    command: ["sh", "-c", "set && mount && ls -la /dev/"]
  resourceClaims:
  - name: resource
    resourceClaimName: shared-claim
